--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.18.0
   equatable: ^2.0.5
   google_fonts: ^6.1.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   bloc_test: ^9.1.4
